fixin issues with vercel not applying sass styles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "sass --verbose sass/styles.scss:css/styles.css"
+    "build": "sass sass:css"
   },
   "devDependencies": {
     "sass": "^1.83.1"
