--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,23 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "sass/**/*.scss",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "css/**/*",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "index.html",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
+  "builds": [
+    {
+      "src": "sass/**/*.scss",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    },
+    "scripts": {
+      "build": "sass sass:css"
+    }
+  }
 }
-  
