--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
   "builds": [
     {
-      "src": "public/index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "public/css/styles.css",
+      "src": "public/**/*",
       "use": "@vercel/static"
     }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
